--- a/Send.css
+++ b/Send.css
@@ -22,7 +22,7 @@ body{
 @media all and (max-width: 1000px) {
 
  
-    object{
+    img{
         position: relative;
         top: 35px;
         
@@ -49,7 +49,7 @@ h3{
 
 @media all and (min-width: 1001px) {
 
-    object{
+    img{
         position: relative;
         top: 1.5vh;
         height: 100%;
@@ -101,7 +101,7 @@ overflow: hidden;
 
 }
 
-object{
+img{
 
     object-fit: cover;
     object-position: bottom;
