--- a/Send.css
+++ b/Send.css
@@ -51,9 +51,9 @@ h3{
 
     img{
         position: relative;
-        top: 1.5vh;
+             top: 4vw;
         height: 100%;
-          width: 50vw;
+          width: 45vw;
       }
 
       h2{
